<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradoClaro"
    tools:context="es.unavarra.tlm.pit.botonmorado.Registro">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/botonmorado_logo"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/textoNombreRegistro"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/textoTelefonoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/checkBoxCondiciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkboxCondiciones" />

        <Button
            android:id="@+id/crearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crearCuenta" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSMS"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
