<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradoClaro"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.unavarra.tlm.pit.botonmorado.BotonMorado"
    tools:showIn="@layout/app_bar_boton_morado">

    <LinearLayout
        android:id="@+id/botonMoradoLayout1"
        android:visibility="visible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/botonMorado"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/roundedbutton"
            android:gravity="center"
            android:text="@string/ayudame"
            android:textSize="36dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botonMoradoLayout2"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoPedirAyuda"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp" />
        <EditText
            android:id="@+id/editTextPedirAyuda"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            android:background="@color/blanco"
            android:textColor="@color/negro"
            android:ems="10" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoAdvertencia"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp" />
        <Button
            android:id="@+id/botonPedirAyuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedirayuda"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp" />
        <Button
            android:id="@+id/botonNoPedirAyuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noPedirAyuda"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botonMoradoLayout3"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/pararAlerta"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/roundedbutton"
                android:gravity="center"
                android:text="@string/pararAlerta"
                android:textSize="25dp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoTranquila"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
