<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradoClaro"
    tools:context="es.unavarra.tlm.pit.botonmorado.Donaciones">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/volver_condiciones"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/volver"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <LinearLayout
        android:id="@+id/layoutCondiciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/volver_condiciones"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/condiciones_de_uso"/>

        <ScrollView
            android:layout_marginTop="20dp"
            android:id="@+id/scrollCondiciones"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/textCondiciones"
                android:text="@string/condiciones"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"/>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

