<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradoClaro"
    tools:context="es.unavarra.tlm.pit.botonmorado.Donaciones">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/volver_donaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/volver"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <LinearLayout
        android:id="@+id/layoutDonaciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/volver_donaciones"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/textoDonaciones"
            android:textSize="19dp"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

    <Button
        android:id="@+id/botonDonar"
        android:visibility="visible"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/donar"
        android:textSize="36dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/volver_donaciones" />

</android.support.constraint.ConstraintLayout>
